--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "maramoja-example",
+  "name": "react-natural-starter",
   "version": "0.0.1",
-  "description": "An isomorphic, no-boilerplate app",
-  "repository": "https://github.com/framp/maramoja",
+  "description": "A simple application",
   "main": "./index.js",
   "scripts": {
     "start": "node ./index.js",
-    "build": "./node_modules/browserify/bin/cmd.js --extension=.jsx ./client.jsx > public/js/app.js",
+    "build": "browserify --extension=.jsx ./client.jsx > public/js/app.js",
+    "watch": "nodemon -e js,jsx --ignore public/ --ignore test/ --exec npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Federico Rampazzo <frampone@gmail.com> (http://framp.me)",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.12.3",
@@ -23,11 +22,12 @@
     "whatwg-fetch": "^0.9.0"
   },
   "devDependencies": {
+    "babel": "^5.2.17",
     "browserify": "^10.2.3",
     "browserify-shim": "^3.8.8",
     "es6ify": "^1.6.0",
-    "reactify": "^1.1.1",
-    "babel": "^5.2.17"
+    "nodemon": "^1.3.7",
+    "reactify": "^1.1.1"
   },
   "browserify": {
     "transform": [
