--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./index.js",
     "build": "browserify --extension=.jsx ./client.jsx > public/js/app.js",
-    "watch": "nodemon -e js,jsx --ignore public/ --ignore test/ --exec npm start",
+    "watch": "nodemon -e js,jsx --ignore public/ --ignore test/ --exec \"npm run\" flow",
+    "flow": "(npm run build &) && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
@@ -18,15 +19,16 @@
     "react-natural": "git://github.com/framp/react-natural.git",
     "react-router": "^0.13.3",
     "react-router-form": "git://github.com/framp/react-router-form.git",
+    "rebundler": "^0.1.0",
     "require-dir": "^0.3.0",
-    "whatwg-fetch": "^0.9.0"
+    "whatwg-fetch": "^0.9.0",
+    "babel": "^5.2.17"
   },
   "devDependencies": {
-    "babel": "^5.2.17",
+    "nodemon": "^1.3.7",
     "browserify": "^10.2.3",
     "browserify-shim": "^3.8.8",
     "es6ify": "^1.6.0",
-    "nodemon": "^1.3.7",
     "reactify": "^1.1.1"
   },
   "browserify": {
